--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -70,12 +70,13 @@
         <div class="col-md-12" style="margin-top: 5%">
                        
             <label class="label" style="margin:0; width:100%;text-align: center">Description</label><div  style="    background-color:  #1f3a93;
-            margin-top: -20px; color:white">
-            <p style="color:white"> ― {{productDetails.user.fullName}}</p>      
-                     <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
+            margin-top: 4px; color:white">
+            
+                     <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas" style="padding:3%">
                       "This type of  scene is very common in Nepalese society.I got this scenario when I was wandering with my daughter Sakshi in Murli Chwok of Birjung.It tooks me 3 days to draw this in canvas."
                       
                      </blockquote> 
+                     <p style="color:white; text-align: right; margin-right:3%; margin-top:-53px"> ― {{productDetails.user.fullName}}</p>      
             </div>
             
            
