--- a/src/app/user-delivered-products/user-delivered-products.component.html
+++ b/src/app/user-delivered-products/user-delivered-products.component.html
@@ -41,7 +41,7 @@
         
           <tr>
               <td colspan="12" class="hiddenRow">
-                <div class="accordian-body collapse" id="demo1"   *ngFor="let product of selectedProduct.delivery_products"> 
+                <div class="accordian-body collapse" id="demo1"   *ngIf="showProduct"> 
                                       
                 <table class="table table-striped" >
                         <thead>
