Rate the delivered produts by user

--- a/src/app/user-delivered-products/user-delivered-products.component.html
+++ b/src/app/user-delivered-products/user-delivered-products.component.html
@@ -1,101 +1,89 @@
+<div class="container" *ngIf="products && products.length > 0">
+  <div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="banner">Not-<strong>Delivered </strong>Products</div>
+      <div class="panel-body">
+        <table class="table table-condensed table-striped">
+          <thead>
+            <tr>
+              <th>TransactionId</th>
 
-  <div class="container" *ngIf="products && products.length > 0">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-          <div class="banner">Not-<strong>Delivered </strong>Products</div>
-          <div class="panel-body">
-            <table class="table table-condensed table-striped">
-      <thead>
-          <tr>
-               <th>TransactionId</th>
-         
-       <th>Address</th>
-          <th>Alternate Address</th>
-         
-          <th>Created Date</th>
-		  <th>Status</th>
-          <th style="width:14%">Actions </th>
-          </tr>
-      </thead>
-  
-      <tbody>
-             <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle" *ngFor="let product of products">
-             <td>{{ product.id }}</td>
-          
-          
-          <td>
-              <address>
+              <th>Address</th>
+              <th>Alternate Address</th>
+
+              <th>Created Date</th>
+              <th>Status</th>
+              <th style="width:14%">Actions </th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle" *ngFor="let product of products">
+              <td>{{ product.id }}</td>
+
+
+              <td>
+                <address>
                   {{ product.default_address.address_line_1}} {{ product.default_address.address_line_2}}
                   {{ product.default_address.country}} {{ product.default_address.city}}
                   {{ product.default_address.province}} {{ product.default_address.postal_code}}
-              </address>
-          </td>
-    
-          <td>{{product.alt_address}}</td>
-          <td>{{ product.created_at }}</td>
-          <td>{{product.isDelivered? "Delivered": "In process"}}</td>
-          <td> <button class="btn btn-default btn-xs" (click)="toggleShowProducts(product)" style="background-color: rgb(12, 185, 99); color:white; border: none; margin: 2%;     padding: 7px 11px;"> <span class="fa fa-eye"></span> </button>
+                </address>
+              </td>
 
-          </td>
-          </tr>
-        
-          <tr>
+              <td>{{product.alt_address}}</td>
+              <td>{{ product.created_at }}</td>
+              <td>{{product.isDelivered? "Delivered": "In process"}}</td>
+              <td> <button class="btn btn-default btn-xs" (click)="toggleShowProducts(product)" style="background-color: rgb(12, 185, 99); color:white; border: none; margin: 2%;     padding: 7px 11px;">
+                  <span class="fa fa-eye"></span> </button>
+
+              </td>
+            </tr>
+
+            <tr>
               <td colspan="12" class="hiddenRow">
-                <div class="accordian-body collapse" id="demo1"   *ngIf="showProduct"> 
-                                      
-                <table class="table table-striped" >
-                        <thead>
-                          <tr class="info">
-                            <th>Image</th>
-                            <th>Product Name</th>
-                            <th>Orientation</th>		
-                            <th>Made On</th>	
-                            <th>Medium</th>	
-                            <th>Size</th>	
-                          </tr>
-                        </thead>	
-                        
-                        <tbody>
-                          
-                          <tr data-toggle="collapse"  class="accordion-toggle" data-target="#demo10"  *ngFor="let product of selectedProduct.delivery_products">
-                            <td> <a href="#"> <img  [src]="product.products.image" alt="custom_art_image" style="width:50px"></a></td>
-                            <td><a (click)="viewProductDetail(product.productId)">{{ product.products.Name }}</a></td>
-                            <td>{{ product.products.Orientation }} </td>
-                            <td>  {{ product.products.buildOn }}</td>
-                            <td> {{ product.products.medium }}</td>
-                            <td> 
-                                                              {{ product.products.size }}
-                            </td>
-                          </tr>
-                          
-      
-              
-                          
-                              
-                         
-                          
-                              
-                         
-                  
-                 
-                        </tbody>
-                   </table>
-               
-                </div> 
-            </td>
-          </tr>
-        
-        
-        
-         
-         
-         
-      </tbody>
-  </table>
-              </div>
-          
-            </div> 
-          
-        </div>
+                <div class="accordian-body collapse" id="demo1" *ngIf="showProduct">
+
+                  <table class="table table-striped">
+                    <thead>
+                      <tr class="info">
+                        <th>Image</th>
+                        <th>Product Name</th>
+                        <th>Orientation</th>
+                        <th>Made On</th>
+                        <th>Medium</th>
+                        <th>Size</th>
+                        <th>Rate</th>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+
+                      <tr data-toggle="collapse" class="accordion-toggle" data-target="#demo10" *ngFor="let product of selectedProduct.delivery_products">
+                        <td> <a href="#"> <img [src]="product.products.image" alt="custom_art_image" style="width:50px"></a></td>
+                        <td><a (click)="viewProductDetail(product.productId)">{{ product.products.Name }}</a></td>
+                        <td>{{ product.products.Orientation }} </td>
+                        <td> {{ product.products.buildOn }}</td>
+                        <td> {{ product.products.medium }}</td>
+                        <td>
+                          {{ product.products.size }}
+                        </td>
+                        <td><ngb-rating [(rate)]="product.rating" (rateChange)="rateChanged($event, product.productId)"></ngb-rating></td>
+                      </tr>
+
+
+
+                    </tbody>
+                  </table>
+
+                </div>
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+
     </div>
-   
+
+  </div>
+</div>
