--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -1,171 +1,191 @@
 <div class="container">
   <div class="row" *ngIf="productDetails">
     <div class="col-md-6" order="1">
-        <br><br>
-        <div class="mag watermarked" >
-            <img  id="zoom_mw" src="{{productDetails.image}}" style=" box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); width:542px" data-toggle="magnify" class="image-responsive " ><br><br>
+      <br><br>
+      <div class="mag watermarked">
+        <img id="zoom_mw" src="{{productDetails.image}}" style=" box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); width:542px"
+          data-toggle="magnify" class="image-responsive "><br><br>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="headline">
+            <h2 style="margin-bottom:0%; text-align:center; font-weight: bold"> Story behind this Art </h2>
+          </div>
+
+          <div class="embed-responsive embed-responsive-16by9  sizer">
+            <iframe width="100%" height="auto" class="embed-responsive-item" src="https://www.youtube.com/embed/x1Kr_ixThGI"
+              frameborder="0" allow="autoplay; encrypted-media" alt="Shankar Man Shrestha Video from youtube site is unable to show..Check your internet connetivity and Try again
+                  "
+              allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="headline" style="margin:0%; text-align:center">
+            <h2 style="margin-bottom:0%; text-align:center; font-weight: bold"><strong>{{productDetails.Name}}</strong></h2>
+
+            <!-- <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span> -->
+
+            <div *ngIf="productDetails.rating.average">
+              <ngb-rating [(rate)]="productDetails.rating.average" [readonly]="true"></ngb-rating>
+            </div>
+
+          </div>
+
+          <br>
+        </div>
+
+        <div class="col-md-12">
+          <div class="description">
+            <hr>
+            Genre : {{productDetails.subCategory.subCategory}}<br>
+            Artist : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue">{{productDetails.user.fullName}}</a><br>
+            Size: {{productDetails.size}}<br>
+            Signed : Yes<br>
+            Orientation : {{productDetails.Orientation}}<br>
+            Material : {{productDetails.buildOn}}<br>
+            Medium : {{productDetails.medium}}<br>
+            Weight(approx) in gm : {{productDetails.weight}} with package<br>
+            Price : Rs. {{productDetails.price}}
+            <hr>
+          </div>
+          <div class="col-md-8 pull-right">
+            <a> <button id="{{productDetails.id}}" (click)="addToCart($event)" class="btn btn-primary  btn-md btn-brand btn-full-width"
+                style="margin-left:0%; width:60%" [hidden]="!isLoggedIn">
+                Add to Cart
+              </button></a>
+          </div>
+
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="headline">
-                <h2 style="margin-bottom:0%; text-align:center; font-weight: bold"> Story behind this Art </h2>
-                </div>
 
-                <div class="embed-responsive embed-responsive-16by9  sizer">
-                  <iframe width="100%" height="auto" class="embed-responsive-item" src="https://www.youtube.com/embed/x1Kr_ixThGI" frameborder="0" allow="autoplay; encrypted-media" alt="Shankar Man Shrestha Video from youtube site is unable to show..Check your internet connetivity and Try again
-                  " allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-      </div> 
-
-
-
-
-
-       <div class="col-md-6">
-            <div class="row">
-                    <div class="col-md-12" >
-                        <div class="headline" style="margin:0%; text-align:center">
-                            <h2 style="margin-bottom:0%; text-align:center; font-weight: bold"><strong>{{productDetails.Name}}</strong></h2>
-                          
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                           
-                        </div>
-                     
-                        <br>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="description">
-                            <hr>
-                                       Genre : {{productDetails.subCategory.subCategory}}<br>
-                                        Artist  : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue">{{productDetails.user.fullName}}</a><br>
-                                        Size: {{productDetails.size}}<br>
-                                        Signed : Yes<br>
-                                        Orientation : {{productDetails.Orientation}}<br>
-                                        Material : {{productDetails.buildOn}}<br>
-                                        Medium : {{productDetails.medium}}<br>
-                                        Weight(approx) in gm : {{productDetails.weight}} with package<br>
-                                        Price : Rs. {{productDetails.price}}
-                            <hr>
-                        </div>
-                        <div class="col-md-8 pull-right">
-                            <a > <button id="{{productDetails.id}}" (click)= "addToCart($event)" class="btn btn-primary  btn-md btn-brand btn-full-width" style="margin-left:0%; width:60%" [hidden]="!isLoggedIn">
-                                Add to Cart
-                            </button></a>
-                        </div>
-    
-                    </div>
-                    <div class="row">
-
-                        <div class="col-md-12 top-10">
-                            <br>
-                            <p>To order by telephone, <a href="tel:01-550555" style="color:blue"> call @ 01-550555</a></p>
-                        </div>
-                    </div>
-                
-                    <div class="tabs">
-                        <input class="input" name="tabs" type="radio" id="tab-1" checked="checked"/>
-                        <label class="label" for="tab-1">Description</label><div class="panel">
-                        <p> ― {{productDetails.user.fullName}}</p>      
-                                 <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
-                                    {{productDetails.description}}                                  
-                                 </blockquote> 
-                        </div>
-                        
-                        <input class="input" name="tabs" type="radio" id="tab-2"/>
-                        <label class="label" for="tab-2">Reviews</label><div class="panel">
-                        <p>
-                            
-                                                           
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span> 
-                                <span style="background-color: green;padding:1%; margin-left:5px; color:white; border-radius:5% ">61</span>
-                             
-                         </p>
-                         <p> ― {{productDetails.user.fullName}}</p>      
-                                 <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
-                                  "This type of  scene is very common in Nepalese society.I got this scenario when I was wandering with my daughter Sakshi in Murli Chwok of Birjung.It tooks me 3 days to draw this in canvas."
-                            
-                                 </blockquote> 
-                                                        </div>
-                         
-                         
-                         
-                         </div>
-                 
-</div>
-
-
-
-
-<!-- related arts -->
+          <div class="col-md-12 top-10">
+            <br>
+            <p>To order by telephone, <a href="tel:01-550555" style="color:blue"> call @ 01-550555</a></p>
+          </div>
         </div>
 
-  <br>  
-<div  *ngIf="products.length > 0" style="text-align: center">
-    <h2 >More By <b style="font-weight: bold; margin-bottom: 0%">{{productDetails.user.fullName}}</b></h2>
-</div>
-<div class="row" style="width:100%" >
-        <div class="col-md-3 col-sm-6" *ngFor = "let prod of products; let i=index" >
-          <div *ngIf="i < 4">
-            <div class="square-card">
-<a alt="square card" style="display: block;">
+        <div class="tabs">
+          <input class="input" name="tabs" type="radio" id="tab-1" checked="checked" />
+          <label class="label" for="tab-1">Description</label>
+          <div class="panel">
+            <p> ― {{productDetails.user.fullName}}</p>
+            <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
+              {{productDetails.description}}
+            </blockquote>
+          </div>
+
+          <input class="input" name="tabs" type="radio" id="tab-2" />
+          <label class="label" for="tab-2">Reviews</label>
+          <div class="panel">
+            
+
+
+              <!-- <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>  -->
+
+              <div *ngIf="productDetails.rating.average">
+                <ngb-rating [(rate)]="productDetails.rating.average" [readonly]="true"></ngb-rating>
+              </div>
+              <span style="background-color: green;padding:1%; margin-left:5px; color:white; border-radius:5% ">61</span>
+
+            
+            <p> ― {{productDetails.user.fullName}}</p>
+            <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
+              "This type of scene is very common in Nepalese society.I got this scenario when I was wandering with my
+              daughter Sakshi in Murli Chwok of Birjung.It tooks me 3 days to draw this in canvas."
+
+            </blockquote>
+          </div>
+
+
+
+        </div>
+
+      </div>
+
+
+
+
+      <!-- related arts -->
+    </div>
+
+    <br>
+    <div *ngIf="products.length > 0" style="text-align: center">
+      <h2>More By <b style="font-weight: bold; margin-bottom: 0%">{{productDetails.user.fullName}}</b></h2>
+    </div>
+    <div class="row" style="width:100%">
+      <div class="col-md-3 col-sm-6" *ngFor="let prod of products; let i=index">
+        <div *ngIf="i < 4">
+          <div class="square-card">
+            <a alt="square card" style="display: block;">
 
               <div class="product-page-single">
                 <div class="single-product-item">
 
-    <div class="product-image-wrap">
-    <div class="card-header" style="padding: 0%">
-                        <a><img src="{{prod.image}}" alt="Product image" style="height:100%" ></a>
-                        </div>
-                        <div class="product-detail-inner">
-                            <div class="item-details-overly-info">
-                                <ul class="list-inline ">
-                                  
-                                    <li class="item-add-to-cart"><a  title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
-                                    <li class="item-wishlist"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
-                                   <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
-                                </ul>
-                            </div>
-                        </div>
+                  <div class="product-image-wrap">
+                    <div class="card-header" style="padding: 0%">
+                      <a><img src="{{prod.image}}" alt="Product image" style="height:100%"></a>
                     </div>
-                    <div class="product-item-details">
-                        <h2><a (click)="viewProductDetail($event)"><strong id="{{prod.id}}">{{prod.Name}}</strong></a></h2><br><h2>{{prod.user.fullName}}</h2>
-                         
-                        <div class="price-like-box">
-                            <div class="pull-left item-price">
-                                <!-- <span class="old-price"><del>$50.00</del></span> -->
-                                <span class="current-price">{{prod.price}}</span>
-                            </div>
-                            <br>
-                            <div class="row" style="padding:10%">
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </a>
-            </div>
-          </div>
-          <!-- <a href="#" class="btn " *ngIf="i == 4" > Show more</a> -->
-        </div>   
-        </div>                        
+                    <div class="product-detail-inner">
+                      <div class="item-details-overly-info">
+                        <ul class="list-inline ">
 
-  
- </div>
+                          <li class="item-add-to-cart"><a title="Add To Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                          <li class="item-wishlist"><a title="Wish list"><i class="fa fa-heart-o"></i></a></li>
+                          <!--  <li class="item-like"><a href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a></li> -->
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="product-item-details">
+                    <h2><a (click)="viewProductDetail($event)"><strong id="{{prod.id}}">{{prod.Name}}</strong></a></h2><br>
+                    <h2>{{prod.user.fullName}}</h2>
+
+                    <div class="price-like-box">
+                      <div class="pull-left item-price">
+                        <!-- <span class="old-price"><del>$50.00</del></span> -->
+                        <span class="current-price">{{prod.price}}</span>
+                      </div>
+                      <br>
+                      <div class="row" style="padding:10%">
+                        <!-- <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span> -->
+
+                        <div *ngIf="productDetails.rating.average">
+                          <ngb-rating [(rate)]="productDetails.rating.average" [readonly]="true"></ngb-rating>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <!-- <a href="#" class="btn " *ngIf="i == 4" > Show more</a> -->
+      </div>
+    </div>
+
+
+  </div>
 </div>
 <app-footer></app-footer>
