--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -32,12 +32,13 @@
                                         <span class="current-price">{{prod.price}}</span>
                                     </div>
                                     <br>
-                                    <div class="row" style="padding:10%">
-                                    <span class="fa fa-star checked"></span>
+                                    <div class="row" style="padding:10%" *ngIf="prod.rating.average">
+                                    <!-- <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span> -->
+                                    <ngb-rating [(rate)]="prod.rating.average" [readonly]="true"></ngb-rating>
                                 </div>
                                 </div>
                             </div>
