--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -7,21 +7,28 @@
           <p class="card__text">Availability: {{ product.availability }}</p>
   
           <div class="card__action-bar">
-            <button type="button" class="card__button" style="cursor: pointer" data-toggle="modal" [attr.data-target]="'#' + product.id">
+            <!-- <button type="button" class="card__button" style="cursor: pointer" data-toggle="modal" [data-target]="'#'+ {{product.id}}">
                 <strong style="color:#3a539b">View More</strong>
-            </button>
-  
+            </button> -->
+  <a class="card__button"  href="#{{product.id}}"style="cursor: pointer" data-toggle="modal" >
+    <strong style="color:#3a539b">View More</strong></a>
             <div class="modal fade" id="{{product.id}}">
                 <div class="modal-dialog">
                   <div class="modal-content" style="padding: 10%">
+                    <p>Size:{{product.size}}</p>
+                    <p>Description:{{product.description}}</p>
+                    <p>Medium:{{product.medium}}</p>
+                    <p>Weight:{{product.weight}}</p>
                     <p>Build on: {{ product.buildOn }}</p>
                   <p>Artist Name: {{ product.user.fullName }}</p>
                   <p>Artist e-mail: {{ product.user.email }}</p>
                   <p>Artist Phone number: {{ product.user.Phone }}</p>
                   <p>Category: {{ product.subCategory.category.Category }}</p>
                   <p>Sub-category: {{ product.subCategory.subCategory }}</p>
+                  <p></p>
                   </div>
                 </div>
+          
               </div>
             <button (click)="verifyProduct(product.id)" class="card__button"><Strong style="color:dimgrey; cursor:pointer">Verify</Strong></button>
               <button  (click)="setRejectIds(product.id, product.user.id); open(content);" style="cursor: pointer" class="card__button" ><Strong style="color:#d91e18">Reject</Strong></button>
