--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,11 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><strong>Featured Artists</strong></a>
+          <a class="nav-link" routerLink="/featuredArtist"><strong>Featured Artists</strong></a>
+        </li>
+        <li class="searchbar">
+            <input type="text" placeholder="Search.." [(ngModel)]="serial" (keyup.enter)="search(serial)">
+
         </li>
 
       </ul>
