--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -51,7 +51,7 @@
           <div class="description">
             <hr>
             Genre : {{productDetails.subCategory.subCategory}}<br>
-            Artist : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue">{{productDetails.user.fullName}}</a><br>
+            Artist : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue;cursor: pointer">{{productDetails.user.fullName}}</a><br>
             Size: {{productDetails.size}}<br>
             Signed : Yes<br>
             Orientation : {{productDetails.Orientation}}<br>
