--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -1,9 +1,10 @@
 <div class="container target">
     <div class="row">
         <div class="col-md-2">
-            <a href="#" class ="pull-left">
-                <img title="profile image" class="img-circle img-responsive prodImage" [src]="imagePath">
+            <a class ="pull-left">
+                <img title="Change Profile Picture" class="img-circle img-responsive prodImage" [src]="imagePath" (click) = "open(content)">
             </a>
+            
 
         </div>
         <div class="col-sm-10  pull-right">
@@ -15,7 +16,8 @@
 
     </div>
     <br>
-
+    <a class="editProfile" (click)="editProfile()" >Edit Profile</a>
+    <br>
 <div class="row">
      <div class="col-md-3">
             <!--left col-->
@@ -198,3 +200,19 @@
 <app-footer>
     
 </app-footer>
+<ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Select Profile Picture</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <span style="color:red;" *ngIf="message">{{message}}</span>
+        <img [src]="imgURL" height="200" *ngIf="imgURL"> <br/>
+        <input #file type='file' accept='image/*' (change)="onSelectFile(file.files)">
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark"   (click)="updateProfilePic()">OK</button>
+    </div>
+  </ng-template>
