delivery toggle verify image fix

--- a/src/app/admin/image-verification/image-verification.component.html
+++ b/src/app/admin/image-verification/image-verification.component.html
@@ -1,57 +1,50 @@
 <div class="container helper">
-    <div class="row" >
-      <div class="card card--big" *ngFor="let product of products" >
-        <img class="card__image" [src]="product.image" alt="product image">
-         
-          <h2 class="card__title">Name: {{ product.Name }}</h2>
-          <p class="card__text">Availability: {{ product.availability }}</p>
-  
-          <div class="card__action-bar">
-            <!-- <button type="button" class="card__button" style="cursor: pointer" data-toggle="modal" [data-target]="'#'+ {{product.id}}">
-                <strong style="color:#3a539b">View More</strong>
-            </button> -->
-  <a class="card__button"  href="#{{product.id}}"style="cursor: pointer" data-toggle="modal" >
-    <strong style="color:#3a539b">View More</strong></a>
-            <div class="modal fade" id="{{product.id}}">
-                <div class="modal-dialog">
-                  <div class="modal-content" style="padding: 10%">
-                    <p>Size:{{product.size}}</p>
-                    <p>Description:{{product.description}}</p>
-                    <p>Medium:{{product.medium}}</p>
-                    <p>Weight:{{product.weight}}</p>
-                    <p>Build on: {{ product.buildOn }}</p>
-                  <p>Artist Name: {{ product.user.fullName }}</p>
-                  <p>Artist e-mail: {{ product.user.email }}</p>
-                  <p>Artist Phone number: {{ product.user.Phone }}</p>
-                  <p>Category: {{ product.subCategory.category.Category }}</p>
-                  <p>Sub-category: {{ product.subCategory.subCategory }}</p>
-                  <p></p>
-                  </div>
+  <div class="row" >
+    <div class="card card--big" *ngFor="let product of products" >
+      <img class="card__image" [src]="product.image" alt="product image">
+       
+        <h2 class="card__title">Name: {{ product.Name }}</h2>
+        <p class="card__text">Availability: {{ product.availability }}</p>
+
+        <div class="card__action-bar">
+          <button type="button" class="card__button" style="cursor: pointer" data-toggle="modal" [attr.data-target]="'#art' + product.id">
+              <strong style="color:#3a539b">View More</strong>
+          </button>
+
+          <div class="modal fade" id="art{{product.id}}">
+              <div class="modal-dialog">
+                <div class="modal-content" style="padding: 10%">
+                  <p>Build on: {{ product.buildOn }}</p>
+                <p>Artist Name: {{ product.user.fullName }}</p>
+                <p>Artist e-mail: {{ product.user.email }}</p>
+                <p>Artist Phone number: {{ product.user.Phone }}</p>
+                <p>Category: {{ product.subCategory.category.Category }}</p>
+                <p>Sub-category: {{ product.subCategory.subCategory }}</p>
                 </div>
-          
               </div>
-            <button (click)="verifyProduct(product.id)" class="card__button"><Strong style="color:dimgrey; cursor:pointer">Verify</Strong></button>
-              <button  (click)="setRejectIds(product.id, product.user.id); open(content);" style="cursor: pointer" class="card__button" ><Strong style="color:#d91e18">Reject</Strong></button>
             </div>
+          <button (click)="verifyProduct(product.id)" class="card__button"><Strong style="color:dimgrey; cursor:pointer">Verify</Strong></button>
+            <button  (click)="setRejectIds(product.id, product.user.id); open(content);" style="cursor: pointer" class="card__button" ><Strong style="color:#d91e18">Reject</Strong></button>
           </div>
         </div>
+      </div>
 
 
-  <ng-template #content let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Comment:</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form>
-        <div class="form-group">
-          <textarea class="form-control" rows="5" id="comment" #comment></textarea>
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" [disabled]="comment.value.length == 0" (click)="modal.close('Save click'); rejectProduct(comment.value);">Send</button>
-    </div>
-  </ng-template>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Comment:</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <textarea class="form-control" rows="5" id="comment" #comment></textarea>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" [disabled]="comment.value.length == 0" (click)="modal.close('Save click'); rejectProduct(comment.value);">Send</button>
+  </div>
+</ng-template>
