--- a/src/app/admin/all-delivered-product/all-delivered-product.component.html
+++ b/src/app/admin/all-delivered-product/all-delivered-product.component.html
@@ -20,8 +20,8 @@
           </tr>
       </thead>
   
-      <tbody>
-             <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle" *ngFor="let product of products">
+      <tbody *ngFor="let product of products">
+             <tr data-toggle="collapse" [attr.data-target]="'#prod' + product.id" class="accordion-toggle" >
               <td>{{ product.totalPrice }}</td>
               <td>{{ product.buyer.fullName }}</td>
           <td>{{ product.buyer.email }}</td>
@@ -42,52 +42,49 @@
                 <button  class="btn btn-default btn-xs" style="background-color: red; color:white; border: none; margin: 2%;     padding: 7px 11px;" (click)="deleteProductDelivery(product.id)"><span class="fa fa-trash"></span></button>
           </td>
           </tr>
-        
           <tr>
-              <td colspan="12" class="hiddenRow">
-                <div class="accordian-body collapse" id="demo1"  [hidden]="!showProduct"> 
-                                      
-                <table class="table table-striped" *ngIf="showProduct" >
-                        <thead>
-                          <tr class="info">
-                            <th>Image</th>
-                            <th>Product Name</th>
-                            <th>Orientation</th>		
-                            <th>Made On</th>	
-                            <th>Medium</th>	
-                            <th>Size</th>	
-                          </tr>
-                        </thead>	
-                        
-                        <tbody>
-                          
-                          <tr data-toggle="collapse"  class="accordion-toggle" data-target="#demo10"  *ngFor="let product of selectedProduct.delivery_products">
-                            <td> <a (click)="viewProductDetail(product.productId)"> <img  [src]="product.products.image" alt="custom_art_image" style="width:50px"></a></td>
-                            <td><a (click)="viewProductDetail(product.productId)">{{ product.products.Name }}</a></td>
-                            <td>{{ product.products.Orientation }} </td>
-                            <td>  {{ product.products.buildOn }}</td>
-                            <td> {{ product.products.medium }}</td>
-                            <td> 
-                                                              {{ product.products.size }}
-                            </td>
-                          </tr>
-                          
-      
+            <td colspan="9">
+          <table class="table table-striped hiddenRow accordian-body collapse" *ngIf="showProduct" id="prod{{product.id}}" [hidden]="!showProduct" >
+            <thead>
+              <tr class="info">
+                <th>Image</th>
+                <th>Product Name</th>
+                <th>Orientation</th>		
+                <th>Made On</th>	
+                <th>Medium</th>	
+                <th>Size</th>	
+              </tr>
+            </thead>	
+            
+            <tbody>
+          
+              <tr data-toggle="collapse"  class="accordion-toggle" data-target="#demo10"  *ngFor="let product of selectedProduct.delivery_products">
+                <td> <a (click)="viewProductDetail(product.productId)" style="cursor:pointer"> <img  [src]="product.products.image" alt="custom_art_image" style="width:50px"></a></td>
+                <td><a (click)="viewProductDetail(product.productId)">{{ product.products.Name }}</a></td>
+                <td>{{ product.products.Orientation }} </td>
+                <td>  {{ product.products.buildOn }}</td>
+                <td> {{ product.products.medium }}</td>
+                <td> 
+                                                  {{ product.products.size }}
+                </td>
+              </tr>
               
-                          
-                              
-                         
-                          
-                              
-                         
+
+  
+              
                   
-                 
-                        </tbody>
-                   </table>
-               
-                </div> 
-            </td>
-          </tr>
+             
+              
+                  
+             
+      
+     
+            </tbody>
+       </table>
+      </td>
+      </tr>
+        
+         
         
         
         
