--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -104,12 +104,13 @@
                                               <span class="current-price">{{prod.price}}</span>
                                           </div>
                                           <br>
-                                          <div class="row" style="padding:10%" *ngIf="prod.rating.rating">
+                                          <div class="row" style="padding:10%" *ngIf="prod.rating.average">
                                           <!-- <span class="fa fa-star checked"></span>
                                           <span class="fa fa-star checked"></span>
                                           <span class="fa fa-star checked"></span>
                                           <span class="fa fa-star"></span>
                                           <span class="fa fa-star"></span> -->
+                                  
                                           <ngb-rating [(rate)] = "prod.rating.average" [readonly]="true"></ngb-rating>
                                       </div>
                                       </div>
@@ -119,7 +120,7 @@
                           </a>
                           </div>
                         </div>
-                        <a id = "{{prod.subCategoryId}}" (click)="showMore($event)" class="btn btn-outline-dark" *ngIf="i == 4" style="color:white;cursor: pointer; z-index:999999999999"> Show more</a>
+                        <a id = "{{prod.subCategoryId}}" (click)="showMore($event)" class="btn btn-outline-dark" *ngIf="i == 4" style="color:white;cursor: pointer;">Show more</a>
                       </div>   
           
                     </div>
