--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -163,17 +163,19 @@
                         <span class="current-price">{{prod.price}}</span>
                       </div>
                       <br>
-                      <div class="row" style="padding:10%">
+                      <div class="row" style="padding-left:10%" >
                         <!-- <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star"></span>
-                            <span class="fa fa-star"></span> -->
-
-                        <div *ngIf="productDetails.rating.average">
-                          <ngb-rating [(rate)]="productDetails.rating.average" [readonly]="true"></ngb-rating>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span> -->
+                
+                        <ngb-rating [(rate)] = "productDetails.rating.average" [readonly]="true" *ngIf="productDetails.rating.average"></ngb-rating>
+                        <div *ngIf="productDetails.rating.average ===undefined">
+                          <br>
                         </div>
-                      </div>
+
+                    </div>
                     </div>
                   </div>
                 </div>
