--- a/src/app/search-result-products/search-result-products.component.html
+++ b/src/app/search-result-products/search-result-products.component.html
@@ -32,14 +32,19 @@
                                     <span class="current-price">{{prod.price}}</span>
                                 </div>
                                 <br>
-                                <div class="row" style="padding:10%" *ngIf="prod.rating.average">
-                                <!-- <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span> -->
-                                <ngb-rating [(rate)]="prod.rating.average" [readonly]="true"></ngb-rating>
-                            </div>
+                                <div class="row" style="padding-left:10%" >
+                                    <!-- <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star"></span> -->
+                            
+                                    <ngb-rating [(rate)] = "prod.rating.average" [readonly]="true" *ngIf="prod.rating.average"></ngb-rating>
+                                    <div *ngIf="prod.rating.average ===undefined">
+                                      <br>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
