--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -179,3 +179,93 @@ width:auto;
 		display: none;
 	}
 }
+.searchbar {
+  position: relative;
+  margin-left: 426px;
+}
+.searchbar.clicked .btn-search {
+  border-radius: 0 40px 40px 0;
+  margin-left: 115px;
+}
+.searchbar.clicked .btn-extended {
+  margin-left: -185px;
+  width: 300px;
+  padding: 20px 30px;
+  opacity: 1;
+  border-radius: 40px 0 0 40px;
+  background-color: #e1e1e1;
+}
+.searchbar .btn-search {
+  position: absolute;
+  background-color: rgba(31, 58, 147, 1);
+  color: white;
+  width: 35px;
+  height: 35px;
+  left: 83%;
+  /* margin-left: -35px; */
+  top: 8%;
+  /* margin-top: -35px; */
+  border-radius: 40px;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+  z-index: 8888888;
+}
+.searchbar .btn-search:before {
+  position: absolute;
+  content: '';
+  display: block;
+  top: 12px;
+    left: 11px;
+    width: 8px;
+    height: 8px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 0px 3px #fff;
+}
+.searchbar .btn-search:after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 4px;
+  top: 20px;
+  left: 18px;
+  background-color: #fff;
+  transform: rotateZ(45deg);
+  border-radius: 3px;
+}
+.searchbar .btn-extended {
+  position: absolute;
+  width: 0px;
+  height: 30px;
+  left: 50%;
+  margin-left: 35px;
+  top: 87%;
+  margin-top: -35px;
+  border-radius: 40px;
+  padding: 0;
+  font-size: 16px;
+  border: none;
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+}
+.searchbar .btn-extended:focus {
+  outline-width: 0px;
+}
+@media (max-width: 992px) {
+  .searchbar .btn-search {
+    position: absolute;
+    background-color: rgba(31, 58, 147, 1);
+    color: white;
+    width: 35px;
+    height: 35px;
+    left: 50%;
+    top: -34px;
+    border-radius: 40px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    z-index: 8888888;
+  }
+  .searchbar {
+    position: relative;
+    margin-left: 200px;
+  }
+}
