--- a/src/app/featured-artist/featured-artist.component.html
+++ b/src/app/featured-artist/featured-artist.component.html
@@ -1,7 +1,7 @@
 
  <div class="row">
     <div class="col-lg-4 col-lg-offset-4">
-        <input type="search" id="search" [(ngModel)]="searchText" value="" class="form-control" placeholder="Search for Artist" style="  margin-left: 600px;margin-top:10px        ">
+        <input type="search" id="search" [(ngModel)]="searchText" value="" class="form-control" placeholder="Search for Artist" style="  margin-left: 90%;margin-top:5%        ">
     </div>
 </div>
 <div class="container">
