--- a/src/app/my-custom-art/my-custom-art.component.html
+++ b/src/app/my-custom-art/my-custom-art.component.html
@@ -30,6 +30,6 @@
 
 </div>
 <ng-template #nopendingart>
-  <h2>No pending Custom Art remaining!</h2>
-  <p>Click <a routerLink="/customizedarthelp">here</a> to know how it works.</p>
+  <h2 style="text-align:center;margin-top: 20%">No pending Custom Art remaining!</h2>
+  <p><a routerLink="/customizedarthelp" style="text-align:center;margin-left: 22%">Click here to know how it works.</a>.</p>
 </ng-template>
