--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -55,6 +55,6 @@
   </div>
 
   <ng-template #noProduct>
-    <h2>Wishlist Empty. Add items to your wishlist and come back here!</h2>
+    <h2 style="text-align:center;margin-top: 20%">Wishlist Empty. Add items to your wishlist and come back here!</h2>
   </ng-template>
 </div>
