--- a/src/app/user-delivered-products/user-delivered-products.component.html
+++ b/src/app/user-delivered-products/user-delivered-products.component.html
@@ -92,5 +92,5 @@
   </div>
 </div>
 <ng-template #nopendingart>
-  <h2>No  Delivery right now!</h2>
+  <h2  style="text-align:center;margin-top: 20%">No  Delivery right now!</h2>
 </ng-template>
