--- a/src/app/payment-form/payment-form.component.css
+++ b/src/app/payment-form/payment-form.component.css
@@ -27,6 +27,16 @@
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+.form2 {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 80%;
+
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
