--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -86,7 +86,7 @@
                                                 </div>
                                             </div>
                                             <div class="product-item-details">
-                                                <h2><a (click)="viewProductDetail($event)" id="{{product.id}}">{{product.Name}}</a><br>{{fullName}}</h2>
+                                                <h2><a (click)="viewProductDetail($event)" id="{{product.id}}" style="cursor:pointer">{{product.Name}}</a><br>{{fullName}}</h2>
                                                  
                                                 <div class="price-like-box">
                                                     <div class="pull-left item-price">
